--- a/pride.html
+++ b/pride.html
@@ -7,73 +7,73 @@
     }
     </style>
     </head>
-    <body><img style="float: left;" src="fig/pride/pride100step0.05n3line.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride108step0.05n1line.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride109step0.1n3line.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride10step0.1n1line.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride10step1n1line.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride112step0.05n3line.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride11step0.05n4.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride11step0.05n4line.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride122step0.2n2line.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride12step0.1n3line.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride12step0.1n4.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride13step0.05n3line.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride15.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride15step1n1.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride16.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride18step0.2n2.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride19step0.5n3.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride1step0.2n2.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride20.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride202step0.2n1line.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride20step1n1.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride24step0.5n1.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride24step0.5n1line.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride27step0.1n3line.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride28.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride29.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride300step0.05n3line.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride30step1n1.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride318step0.2n3line.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride32step0.1n3line.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride38.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride39step0.5n1.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride3step0.2n2.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride3step0.2n3.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride42.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride44.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride44step0.5n1.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride46step0.05n4.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride49step0.5n1.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride49step0.5n1line.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride4step0.5n1.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride4step0.5n1line.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride51.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride53.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride532step0.2n1line.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride53step0.2n1line.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride53step0.2n3line.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride540step0.1n1line.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride56.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride59.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride62step0.3n1line.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride63.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride63step0.05n3line.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride69.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride69step0.2n2line.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride69step0.2n3line.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride70.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride76.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride77.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride7step0.1n3.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride7step0.1n3line.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride81.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride87.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride88.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride92.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride93.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride96.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride97.png" width="450"/>
-<img style="float: left;" src="fig/pride/pride9step0.5n1.png" width="450"/></body>
+    <body><img style="float: left;" src="fig/pride/pride100step0.05n3line.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride108step0.05n1line.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride109step0.1n3line.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride10step0.1n1line.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride10step1n1line.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride112step0.05n3line.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride11step0.05n4.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride11step0.05n4line.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride122step0.2n2line.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride12step0.1n3line.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride12step0.1n4.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride13step0.05n3line.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride15.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride15step1n1.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride16.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride18step0.2n2.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride19step0.5n3.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride1step0.2n2.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride20.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride202step0.2n1line.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride20step1n1.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride24step0.5n1.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride24step0.5n1line.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride27step0.1n3line.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride28.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride29.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride300step0.05n3line.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride30step1n1.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride318step0.2n3line.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride32step0.1n3line.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride38.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride39step0.5n1.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride3step0.2n2.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride3step0.2n3.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride42.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride44.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride44step0.5n1.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride46step0.05n4.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride49step0.5n1.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride49step0.5n1line.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride4step0.5n1.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride4step0.5n1line.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride51.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride53.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride532step0.2n1line.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride53step0.2n1line.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride53step0.2n3line.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride540step0.1n1line.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride56.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride59.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride62step0.3n1line.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride63.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride63step0.05n3line.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride69.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride69step0.2n2line.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride69step0.2n3line.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride70.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride76.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride77.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride7step0.1n3.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride7step0.1n3line.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride81.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride87.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride88.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride92.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride93.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride96.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride97.png" height="450"/>
+<img style="float: left;" src="fig/pride/pride9step0.5n1.png" height="450"/></body>
     </html>
