--- a/watercolor.html
+++ b/watercolor.html
@@ -7,12 +7,12 @@
     }
     </style>
     </head>
-    <body><img style="float: left;" src="fig/watercolor/watercolor11n300.png" width="450"/>
-<img style="float: left;" src="fig/watercolor/watercolor14n200.png" width="450"/>
-<img style="float: left;" src="fig/watercolor/watercolor15n300.png" width="450"/>
-<img style="float: left;" src="fig/watercolor/watercolor16n400.png" width="450"/>
-<img style="float: left;" src="fig/watercolor/watercolor17n100.png" width="450"/>
-<img style="float: left;" src="fig/watercolor/watercolor19n400.png" width="450"/>
-<img style="float: left;" src="fig/watercolor/watercolor3n300.png" width="450"/>
-<img style="float: left;" src="fig/watercolor/watercolor7n300.png" width="450"/></body>
+    <body><img style="float: left;" src="fig/watercolor/watercolor11n300.png" height="450"/>
+<img style="float: left;" src="fig/watercolor/watercolor14n200.png" height="450"/>
+<img style="float: left;" src="fig/watercolor/watercolor15n300.png" height="450"/>
+<img style="float: left;" src="fig/watercolor/watercolor16n400.png" height="450"/>
+<img style="float: left;" src="fig/watercolor/watercolor17n100.png" height="450"/>
+<img style="float: left;" src="fig/watercolor/watercolor19n400.png" height="450"/>
+<img style="float: left;" src="fig/watercolor/watercolor3n300.png" height="450"/>
+<img style="float: left;" src="fig/watercolor/watercolor7n300.png" height="450"/></body>
     </html>
